feat: checking config file existance

--- a/llm/_security/llm_guard_openai/makefile
+++ b/llm/_security/llm_guard_openai/makefile
@@ -1,30 +1,49 @@
+SHELL := /bin/bash
 
-all: requirements install_python install required_python size help
+DIR=$(shell basename $$(pwd))
+CONTAINER_IMAGE=quay.io/vicenteherrera/python-dev-shell
+CONTAINER_TAG=3.11.7-${DIR}
+
+CONFIG_FILE=$(shell for p in "env.txt" "../env.txt" "../../env.txt" "../../../env.txt"; do [[ -f "$$p" ]] && echo "$$p" && break; done || echo "")
+
+all: requirements install_python install required_python download size help
+
+run: help
 
 help:
+	@echo ""
+	@echo "HELP"
 	@echo ""
 	@echo "# User discloses private information to AI endpoint (OpenAI)"
 	@echo "make run-unprotected   # Discloses private information"
 	@echo "make run-protected     # Private information is filtered"
+	@echo ""
 	@echo "# User queries information out of context"
 	@echo "make run-no-injection2 # No injection"
 	@echo "make run-unprotected2  # With prompt injection"
 	@echo "make run-protected2    # Prompt injection is blocked"
+	@echo ""
 
-run-unprotected:
+run-unprotected: config_exists
 	poetry run python ./src/app1-unprotected.py 
 
-run-protected:
+run-protected: config_exists
+	HF_HOME='./.cache/huggingface/' \
 	poetry run python ./src/app1-protected.py
 
-run-no-injection2:
+run-no-injection2: config_exists
 	poetry run python ./src/app2-no-injection.py 
 
-run-unprotected2:
+run-unprotected2: config_exists
 	poetry run python ./src/app2-unprotected.py 
 
-run-protected2:
+run-protected2: config_exists
+	HF_HOME='./.cache/huggingface/' \
 	poetry run python ./src/app2-protected.py 
+
+download:
+	HF_HOME='./.cache/huggingface/' \
+	poetry run python ./build/download.py 
 
 code:
 	poetry run code .
@@ -34,6 +53,10 @@ code:
 requirements:
 	which pyenv
 	which poetry
+
+config_exists:
+	@[ ! -z "${CONFIG_FILE}" ] || ( echo "Error: Config file env.txt not found" && exit 1 )
+	@echo "Config file found at ${CONFIG_FILE}"
 
 install_python: upgrade_pyenv
 	pyenv install $$(cat .python-version) -s
@@ -73,19 +96,20 @@ show:
 info:
 	poetry run poetry env info -p
 
-delete: delete-venv delete-huggingface-home
+delete: delete_venv delete-huggingface-local
 
-delete-venv:
+delete_venv:
 	poetry env remove --all ||:
 
-delete-huggingface-home:
-	rm -r $$HOME/.cache/huggingface/ ||:
+delete-huggingface-local:
+	rm -r ./.cache/huggingface/ ||:
 
 size:
+	@echo ""
 	@echo "Size of libraries"
 	@du -sh $$(poetry env info --path 2>/dev/null)
 	@echo "Size of models"
-	@du -sh $$HOME/.cache/huggingface/
+	@du -sh ./.cache/huggingface/ ||:
 	@echo "Size of devpi cache"
 	@du -sh $$HOME/.devpi/server ||:
 
