--- a/llm/containerize_model/makefile
+++ b/llm/containerize_model/makefile
@@ -12,6 +12,9 @@ REVISION=main
 
 CONTAINER_IMAGE=quay.io/vicenteherrera/llm-test
 
+CONFIG_FILE=$(shell for p in "env.txt" "../env.txt" "../../env.txt" "../../../env.txt"; do [[ -f "$$p" ]] && echo "$$p" && break; done || echo "")
+
+
 all: requirements install_python install required_python download run-offline-local size
 
 code:
@@ -21,7 +24,8 @@ code:
 
 run: run-offline
 
-run-online-local:
+run-online-local: config_exists
+	source "${CONFIG_FILE}" && \
 	HF_HOME='./.cache/huggingface/' \
 	MODEL="${MODEL}" REVISION="${REVISION}" \
 	poetry run python ./src/app.py
@@ -48,21 +52,21 @@ run-offline-local-bin:
 
 download: download-local
 
-download-local:
-	source "$$(for p in "env.txt" "../env.txt" "../../env.txt"; do [[ -f "$p" ]] && echo "$$p" && break; done || echo "/dev/null")" && \
+download-local: config_exists
+	source "${CONFIG_FILE}" && \
 	HF_HOME='./.cache/huggingface/' \
 	poetry run huggingface-cli download --token=$$HUGGINGFACE_TOKEN \
 		"${MODEL}" \
 		--revision "${REVISION}" \
 		--include "${MODEL_EXT}" "*.json" "tokenizer.model" "*.txt"
 
-download-local-py:
+download-local-py: config_exists
 	HF_HOME='./.cache/huggingface/' \
 	MODEL="${MODEL}" REVISION="${REVISION}" \
 	poetry run python ./build/model_download.py
 
-download-home:
-	source "$$(for p in "env.txt" "../env.txt" "../../env.txt"; do [[ -f "$p" ]] && echo "$$p" && break; done || echo "/dev/null")" && \
+download-home: config_exists
+	source "${CONFIG_FILE}" && \
 	HF_HOME="$$HOME/.cache/huggingface/" && \
 	poetry run huggingface-cli download --token=$$HUGGINGFACE_TOKEN \
 		"${MODEL}" \
@@ -85,6 +89,10 @@ compile:
 requirements:
 	which pyenv
 	which poetry
+
+config_exists:
+	@[ ! -z "${CONFIG_FILE}" ] || ( echo "Error: Config file env.txt not found" && exit 1 )
+	@echo "Config file found at ${CONFIG_FILE}"
 
 install_python: upgrade_pyenv
 	pyenv install $$(cat .python-version) -s
