fix: consistent poetry project names

--- a/llm/client_server_openai/backend_v2/pyproject.toml
+++ b/llm/client_server_openai/backend_v2/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "openai_backend"
+name = "backend_openai_rag"
 version = "0.1.0"
 description = ""
 authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
