--- a/llm/containerize_model/pyproject.toml
+++ b/llm/containerize_model/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "local_model"
+name = "containerize_model"
 version = "0.1.0"
 description = ""
 authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
