--- a/llm/_security/pickle/pyproject.toml
+++ b/llm/_security/pickle/pyproject.toml
@@ -19,6 +19,7 @@ priority = "primary"
 python = "3.11.7"
 pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
+fickling = "^0.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
