--- a/llm/_security/simple_garak/pyproject.toml
+++ b/llm/_security/simple_garak/pyproject.toml
@@ -16,8 +16,9 @@ priority = "primary"
 # Disable PyPI and uncomment this to use devpi local library cache
 
 [tool.poetry.dependencies]
-python = "^3.11.7"
+python = "3.11.7"
 garak = "^0.9.0.13.post1"
+huggingface-hub = {extras = ["cli"], version = "^0.23.4"}
 
 
 [tool.poetry.group.dev.dependencies]
